Fix issue where nav links were stretching beyond width: 100%.

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -28,7 +28,6 @@ nav {
 
     li a {
       display: block;
-      float: left;
       padding: 0.5rem 0.5rem 0.25rem;
       margin: 0 0.25rem;
       text-transform: uppercase;
